Fix wrapping issue with code

--- a/css/main.css
+++ b/css/main.css
@@ -269,6 +269,7 @@ a:visited{
   -moz-border-radius: 3px;
   border-radius: 3px;
   font-size: 15px;
+  overflow-x: auto;
 }
 
 .post code { padding: 1px 5px; }
